# Busca-do-sportfy

./: LICENSE  README.md
testando/: pyproject.toml
testando/static/: style.css
testando/templates/: index.html
testando/testando/: app.py  schemas.py
